# otampy

./: .gitignore  LICENSE.md  README.md  conftest.py  deploy.py  pyproject.toml  release.sh
device/: README.md  boot.py
device/examples/: main.py
device/lib/: Log_to_file.py  Logger.py  logger.py
device/lib/otampy/: ota.py
docs/: README.md  architecture.md  deployment.md  footprint-review.md  memory-explainer.md  minify-options.md  performance_review.md  protocol.md  releasing.md
hardware/: pinout.md
scripts/: release_check.py
src/otampy/: OTAmpy.py  README.md  __init__.py  cli.py  deploy.py  minify.py
src/otampy/device/: README.md
src/otampy/device/examples/: boot.py  configota.example.py  main.py  minimal_ping.py  ota-config.example.py  shared_uart_telemetry.py
src/otampy/device/lib/: Blink.py
src/otampy/device/lib/otampy/: boot.py  core.py  manager.py  ota.py
src/otampy/device/tests/: conftest.py  test_ota_boot.py  test_ota_core.py  test_ota_facade.py  test_ota_manager.py
src/otampy/device/tools/: footprint_boot.py  footprint_stress.py  footprint_update.py
src/otampy/utils/: logging_utils.py
tests/: conftest.py  test_cli.py  test_deploy.py  test_logger.py  test_loggger_to_file.py  test_minify.py
