[project]
name = "OTAmpy"
version = "0.1.0"
description = "OTA application firmware update solution for MicroPython"
readme = "README.md"
license = "SUL-1.0"
license-files = ["LICENSE.md"]
authors = [{ name = "Simon R. Lincoln", email = "oss@codeability.co.uk" }]
requires-python = ">=3.12"
dependencies = ["pyserial>=3.5", "urst>=1.0.0,<2.0.0", "click>=8.0.0", "rich>=13.0.0"]


# Install the package with `uv tool install -e .` to make these script commands available (`-e` is optional for editable install)
[project.scripts]
otampy = "otampy.OTAmpy:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"


[project.optional-dependencies]
serial = ["pyserial>=3.5"]
urst = ["urst>=1.0.0,<2.0.0"]


[dependency-groups]
dev = ["pyserial>=3.5", "pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]


# --- Ruff ---
[tool.ruff]
src = ["src"]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
# fixable = ["all"]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
addopts = "--cov=otampy --cov-report=term-missing"

[tool.uv.sources]
urst = { git = "https://github.com/simonl65/urst-mpy.git" }
