[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "micropython-rp2-rpi_pico_w-stubs==1.28.0.*",
]


# --- Ruff ---
[tool.ruff]
src = ["packages/cli/src", "packages/device/lib"]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM105", # Checks for try-except-pass blocks
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["packages/cli/tests", "packages/device/tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
addopts = "--cov=packages/cli/src/otampy --cov-report=term-missing"

[tool.uv.sources]
urst = { git = "https://github.com/simonl65/urst-mpy.git" }
logger = { git = "https://github.com/simonl65/log-to-file.git" }

[tool.uv.workspace]
members = ["packages/cli"]

[tool.pyright]
include = ["."]
extraPaths = ["./lib"]
ignore = ["**/typings"]
exclude = [
    ".*",
    "__*",
    "**/typings",
    "**/node_modules",
    "**/__pycache__",
    ".venv",
]

typeCheckingMode = "standard"
stubPath = "typings"
typeshedPath = "typings"
pythonPlatform = "Linux"

reportMissingModuleSource = "none"

[project.optional-dependencies]
# install to folder typings
# uv pip install -r pyproject.toml --extra stubs --target typings
stubs = ["micropython-rp2-rpi_pico_w-stubs==1.28.0.*"]
